# oreilly-evaluating-llms

./: README.md  pyproject.toml  selfcheckperplexity.ipynb
data/: ai_surveillance_data.csv
