[project]
name = "oreilly-evaluating-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "openai>=1.74.0",
    "pandas>=2.2.3",
    "pydantic-ai[examples]>=0.1.1",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
